--- a/epubreader/src/main/res/values/strings.xml
+++ b/epubreader/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">FolioReader Sample</string>
+
+    <!-- Navigation Bottom Title -->
+    <string name="home">Trang chủ</string>
+    <string name="search">Tìm kiếm</string>
+    <string name="favorites">Danh sách</string>
+    <string name="reading">Đang đọc</string>
 </resources>
