Init tab layout and view pager

--- a/epubreader/src/main/res/values/strings.xml
+++ b/epubreader/src/main/res/values/strings.xml
@@ -6,4 +6,12 @@
     <string name="search">Tìm kiếm</string>
     <string name="favorites">Danh sách</string>
     <string name="reading">Đang đọc</string>
+
+    <!-- tab layout items -->
+    <string name="selfhelp">Kỹ năng</string>
+    <string name="culture">Văn hóa - xã hội</string>
+    <string name="economic">Kinh tế</string>
+    <string name="history">Lịch sử</string>
+    <string name="classic">Tác phẩm kinh điển</string>
+
 </resources>
