--- a/epubreader/src/main/res/values/strings.xml
+++ b/epubreader/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="history">Lịch sử</string>
     <string name="classic">Tác phẩm kinh điển</string>
 
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
 </resources>
