Update image, text color and bacgkround color for sub nav tab and bottom tab

--- a/epubreader/src/main/res/values/strings.xml
+++ b/epubreader/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
 
     <!-- tab layout items -->
     <string name="selfhelp">Kỹ năng</string>
-    <string name="culture">Văn hóa - xã hội</string>
+    <string name="culture">Văn hóa - Xã hội</string>
     <string name="economic">Kinh tế</string>
     <string name="history">Lịch sử</string>
     <string name="classic">Tác phẩm kinh điển</string>
